data/derived/comb/progs/unify/prog6743.ml.out
Characters 473-494:
  | 5 -> buildExpn(build(rand,depth-1))
                  ^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type expr but an expression was expected of type
         expr * expr
